FIX: &agrave; in Età. (missed comma)

--- a/easyris/templates/RefertoTemplate.html
+++ b/easyris/templates/RefertoTemplate.html
@@ -266,7 +266,7 @@
   <p class="c2"><span><b>Nr. Paziente:</b> {{patient_id_patient}}</span></p>
   <p class="c2"><span><b>Data Esame:</b> {{examination_date.strftime('%d/%m/%Y')}}</span></p>
   <p class="c2"><span><b>Paziente:</b> {{patient_first_name}} {{patient_last_name}}</span></p>
-  <p class="c2"><span><b>Data di Nascita:</b> {{patient_birth_date.strftime('%d/%m/%Y')}} <b>Et&agrave:</b> {{patient_age}}</span></p>
+  <p class="c2"><span><b>Data di Nascita:</b> {{patient_birth_date.strftime('%d/%m/%Y')}} <b>Et&agrave;:</b> {{patient_age}}</span></p>
   <p class="c2"><span><b>Provenienza:</b> RIANIMAZIONE</span></p>
   <p class="c2"><span><b>Quesito Diagnostico:</b> coma</span></p>
   <p class="c0"><span></span></p>
